--- a/examples/kitchen-sink.html
+++ b/examples/kitchen-sink.html
@@ -5,6 +5,7 @@
   <head>
     <title>Themestrap Sample - A Bootstrap 3 Theme</title>
     <meta name="viewport" content="width=device-width">
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="../dist/css/bootstrap.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
